--- a/Flask-Web-App/templates/index.html
+++ b/Flask-Web-App/templates/index.html
@@ -39,7 +39,7 @@
 		</div>
 	</nav>
 
-	<br><br>
+	<br>
 	<div class="container container-border">
 		<div class="row">
 			<div class="col-md-12">
@@ -51,27 +51,26 @@
 				<br><br><br>
 				<dl class="dl-horizontal">
 					<dt class="t1"><u>App Features</u> :</dt>
-					<dd><li>The application has proper security measures to prevent unauthorized access.</li></dd>
-					<dd><li>The application has proper database management system.</li></dd>
-					<dd><li>Users of the application can upload files to the system.</li></dd>
-					<dd><li>Uploaded files are stored in the local/server system and 'location-information' of the files are stored in the database.</li></dd>
-					<dd><li>Users of the application can see the list of uploaded file in the home page.</li></dd>
-					<dd><li>Users of the application can delete the uploaded files frome the system.</li></dd>
-					<dd><li>Lastly, users of the application can DOWNLOAD the uploaded files asynchronously.</li></dd>
+					<dd class="t1"><li>The application has proper security measures to prevent unauthorized access.</li></dd>
+					<dd class="t1"><li>The application has proper database management system.</li></dd>
+					<dd class="t1"><li>Users of the application can upload files to the system.</li></dd>
+					<dd class="t1"><li>Uploaded files are stored in the local/server system and 'location-information' of the files are stored in the database.</li></dd>
+					<dd class="t1"><li>Users of the application can see the list of uploaded file in the home page.</li></dd>
+					<dd class="t1"><li>Users of the application can delete the uploaded files frome the system.</li></dd>
+					<dd class="t1"><li>Lastly, users of the application can DOWNLOAD the uploaded files asynchronously.</li></dd>
 
 					<br><br>
 					<dt class="t1"><u>Library Packages</u> :</dt>
-					<dd><li><b>pip — </b> is the Package Installer for Python.</li></dd>
-					<dd><li><b>flask — </b> 'pip install flask'</li></dd>
-					<dd><li><b>Flask-MySQL — </b> 'pip install flask-mysql'</li></dd>
-					<dd><li><b>mysql-connector — </b> 'pip install mysql-connector-python'</li></dd>
-					<dd><li><b>Flask-Uploads — </b> 'pip install Flask-Uploads'</li></dd>
-					<dd><li><b>flask-login — </b> 'pip install flask-login'</li></dd>
-					<dd><li><b>WTForms — </b> 'pip install WTForms'</li></dd>
-					<dd><li><b>aiofiles — </b> 'pip install aiofiles'</li></dd>
-					<dd><li>And some other library packages which is installed by default with flask like — 
+					<dd class="t1"><li><b>pip — </b> is the Package Installer for Python.</li></dd>
+					<dd class="t1"><li><b>flask — </b> 'pip install flask'</li></dd>
+					<dd class="t1"><li><b>Flask-MySQL — </b> 'pip install flask-mysql'</li></dd>
+					<dd class="t1"><li><b>mysql-connector — </b> 'pip install mysql-connector-python'</li></dd>
+					<dd class="t1"><li><b>Flask-Uploads — </b> 'pip install Flask-Uploads'</li></dd>
+					<dd class="t1"><li><b>flask-login — </b> 'pip install flask-login'</li></dd>
+					<dd class="t1"><li><b>WTForms — </b> 'pip install WTForms'</li></dd>
+					<dd class="t1"><li><b>aiofiles — </b> 'pip install aiofiles'</li></dd>
+					<dd class="t1"><li>And some other library packages which is installed by default with flask like — 
 							<b>Jinja, werkzeug, asyncio </b> etc.</li></dd>
-					
 					
 					<br>
 				</dl>
